clusters/talos-stpetersburg/apps/home-assistant/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  selector:
    app: homeassistant
  ports:
    - name: http
      port: 8123
      targetPort: 8123
  type: ClusterIP
